force-app/main/default/objects/ReferentielOperation__c/ReferentielOperation__c.object-meta.xml
<CustomObject>
    <label>Opération</label>
    <nameField>
        <label>Intitulé de l&apos;opération</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opérations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>