force-app/main/default/objects/ReferentielOperation__c/fields/Autrescouts__c.field-meta.xml
<CustomField>
    <fullName>Autrescouts__c</fullName>
    <label>Autres coûts HT</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>