force-app/main/default/objects/ReferentielOperation__c/fields/Code2__c.field-meta.xml
<CustomField>
    <fullName>Code2__c</fullName>
    <description>Le code représentant la concaténation du codeDV + l&apos;auronumber qui sera rempli via un WF lors de la création</description>
    <label>Code interne</label>
    <length>10</length>
    <type>Text</type>
</CustomField>