force-app/main/default/objects/ReferentielOperation__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <formula>/* IF(OR(Owner:User.Profile.Name = &apos;K/K - DV&apos;,  Owner:User.Profile.Name =&apos;K/K - DV - Mobile&apos;),
  Owner:User.prefixeDV__c + &apos;-&apos; +  CodeIncrement__c, 
  Code_DV__c + &apos;-&apos;+ CodeIncrement__c
) */

IF(BEGINS(Owner:User.Profile.Name, &apos;K/K - DV&apos;),
  Owner:User.prefixeDV__c + &apos;-&apos; +  CodeIncrement__c, 
  Code_DV__c + &apos;-&apos;+ CodeIncrement__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code opération</label>
    <type>Text</type>
</CustomField>