force-app/main/default/objects/ReferentielOperation__c/fields/Code_DV__c.field-meta.xml
<CustomField>
    <fullName>Code_DV__c</fullName>
    <inlineHelpText>ce champ sert pour les foires qui sont créées par le contrôle de Gestion ou DAF qui n&apos;ont pas de Code DV</inlineHelpText>
    <label>Code DV</label>
    <length>3</length>
    <type>Text</type>
</CustomField>