force-app/main/default/objects/ReferentielOperation__c/fields/Code_DV_automatique__c.field-meta.xml
<CustomField>
    <fullName>Code_DV_automatique__c</fullName>
    <formula>Owner:User.prefixeDV__c</formula>
    <inlineHelpText>ce champ sert à rapatrier le Code DV de la fiche utilisateur</inlineHelpText>
    <label>Code DV automatique</label>
    <type>Text</type>
</CustomField>