force-app/main/default/objects/ReferentielOperation__c/fields/CodeIncrement__c.field-meta.xml
<CustomField>
    <fullName>CodeIncrement__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>CodeIncrement</label>
    <type>AutoNumber</type>
</CustomField>