force-app/main/default/objects/ReferentielOperation__c/fields/Coutemplacement__c.field-meta.xml
<CustomField>
    <fullName>Coutemplacement__c</fullName>
    <label>Coût emplacement HT</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>