force-app/main/default/objects/ReferentielOperation__c/fields/Coutsmontagedemontage__c.field-meta.xml
<CustomField>
    <fullName>Coutsmontagedemontage__c</fullName>
    <label>Coûts montage/démontage HT</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>