force-app/main/default/objects/ReferentielOperation__c/fields/Datedebut__c.field-meta.xml
<CustomField>
    <fullName>Datedebut__c</fullName>
    <label>Date début (officielle)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>