force-app/main/default/objects/ReferentielOperation__c/fields/Datefin__c.field-meta.xml
<CustomField>
    <fullName>Datefin__c</fullName>
    <label>Date fin (officielle)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>