force-app/main/default/objects/ReferentielOperation__c/fields/dateFinSaisie__c.field-meta.xml
<CustomField>
    <fullName>dateFinSaisie__c</fullName>
    <description>Opération référençable pendant 4 jours après la fin officielle afin de permettre au réseau la saisie des informations</description>
    <formula>IF (TODAY() &gt;=  DATE(2019, 01, 01),
  IF(ISNULL(Datefin__c), 
     null,
     IF (ISPICKVAL(Origine__c, &apos;FOIRE&apos;), 
         Datefin__c + 30,
         Datefin__c + 15)),
  IF(ISNULL(Datefin__c), null, Datefin__c + 15)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date fin (saisie)</label>
    <type>Date</type>
</CustomField>