force-app/main/default/objects/ReferentielOperation__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <formula>Datedebut__c &lt;= TODAY() &amp;&amp;
TODAY() &lt;=  dateFinSaisie__c</formula>
    <label>[#] Actif</label>
    <type>Checkbox</type>
</CustomField>