force-app/main/default/objects/ReferentielOperation__c/fields/magasins__c.field-meta.xml
<CustomField>
    <fullName>magasins__c</fullName>
    <description>FGO : MAJ du 04/01/2023</description>
    <label>Magasins</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AGEN</fullName>
            </value>
            <value>
                <fullName>AIX EN PROVENCE</fullName>
            </value>
            <value>
                <fullName>ALBERTVILLE</fullName>
            </value>
            <value>
                <fullName>ALBI</fullName>
            </value>
            <value>
                <fullName>ALES</fullName>
            </value>
            <value>
                <fullName>AMIENS</fullName>
            </value>
            <value>
                <fullName>ANGERS</fullName>
            </value>
            <value>
                <fullName>ANGOULEME</fullName>
            </value>
            <value>
                <fullName>ANNECY</fullName>
            </value>
            <value>
                <fullName>ANNEMASSE</fullName>
            </value>
            <value>
                <fullName>ANTIBES</fullName>
            </value>
            <value>
                <fullName>ARPAJON</fullName>
            </value>
            <value>
                <fullName>ARRAS</fullName>
            </value>
            <value>
                <fullName>AUBAGNE</fullName>
            </value>
            <value>
                <fullName>AUXERRE</fullName>
            </value>
            <value>
                <fullName>AVIGNON</fullName>
            </value>
            <value>
                <fullName>BAYONNE</fullName>
            </value>
            <value>
                <fullName>BESANCON</fullName>
            </value>
            <value>
                <fullName>BEZIERS</fullName>
            </value>
            <value>
                <fullName>BLOIS</fullName>
            </value>
            <value>
                <fullName>BONNEUIL</fullName>
            </value>
            <value>
                <fullName>BORDEAUX CENTRE</fullName>
            </value>
            <value>
                <fullName>BORDEAUX MEDOC</fullName>
            </value>
            <value>
                <fullName>BORDEAUX NORD</fullName>
            </value>
            <value>
                <fullName>BORDEAUX VILLENAVE</fullName>
            </value>
            <value>
                <fullName>BOULOGNE BILLANCOURT</fullName>
            </value>
            <value>
                <fullName>BOURG EN BRESSE</fullName>
            </value>
            <value>
                <fullName>BOURG LA REINE</fullName>
            </value>
            <value>
                <fullName>BRIE</fullName>
            </value>
            <value>
                <fullName>CAEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>