force-app/main/default/objects/ReferentielOperation__c/fields/Magasins_DR_Est__c.field-meta.xml
<CustomField>
    <fullName>Magasins_DR_Est__c</fullName>
    <label>Magasins (DR Est)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AIX EN PROVENCE</fullName>
            </value>
            <value>
                <fullName>ALBERTVILLE</fullName>
            </value>
            <value>
                <fullName>ALES</fullName>
            </value>
            <value>
                <fullName>ANNECY</fullName>
            </value>
            <value>
                <fullName>ANNEMASSE</fullName>
            </value>
            <value>
                <fullName>ANTIBES</fullName>
            </value>
            <value>
                <fullName>AUBAGNE</fullName>
            </value>
            <value>
                <fullName>AVIGNON</fullName>
            </value>
            <value>
                <fullName>BEZIERS</fullName>
            </value>
            <value>
                <fullName>BOURG EN BRESSE</fullName>
            </value>
            <value>
                <fullName>CANNES</fullName>
            </value>
            <value>
                <fullName>CHALON SUR SAONE</fullName>
            </value>
            <value>
                <fullName>CHAMBERY</fullName>
            </value>
            <value>
                <fullName>DIJON</fullName>
            </value>
            <value>
                <fullName>DRAGUIGNAN</fullName>
            </value>
            <value>
                <fullName>FREJUS</fullName>
            </value>
            <value>
                <fullName>GRASSE</fullName>
            </value>
            <value>
                <fullName>GRENOBLE</fullName>
            </value>
            <value>
                <fullName>HYERES</fullName>
            </value>
            <value>
                <fullName>LA TOUR DU PIN</fullName>
            </value>
            <value>
                <fullName>LONS LE SAUNIER</fullName>
            </value>
            <value>
                <fullName>LYON GAILLETON</fullName>
            </value>
            <value>
                <fullName>LYON JEAN JAURES</fullName>
            </value>
            <value>
                <fullName>LYON MARIETTON</fullName>
            </value>
            <value>
                <fullName>LYON VITTON</fullName>
            </value>
            <value>
                <fullName>MACON</fullName>
            </value>
            <value>
                <fullName>MANOSQUE</fullName>
            </value>
            <value>
                <fullName>MARIGNANE</fullName>
            </value>
            <value>
                <fullName>MARSEILLE BAILLE</fullName>
            </value>
            <value>
                <fullName>MARSEILLE BANON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>