force-app/main/default/objects/ReferentielOperation__c/fields/Magasins_DR_IDF__c.field-meta.xml
<CustomField>
    <fullName>Magasins_DR_IDF__c</fullName>
    <label>Magasins (DR IDF)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ARPAJON</fullName>
            </value>
            <value>
                <fullName>ATHIS MONS</fullName>
            </value>
            <value>
                <fullName>BOULOGNE</fullName>
            </value>
            <value>
                <fullName>BOURG LA REINE</fullName>
            </value>
            <value>
                <fullName>BRIE COMTE ROBERT</fullName>
            </value>
            <value>
                <fullName>CHAMPIGNY</fullName>
            </value>
            <value>
                <fullName>CHELLES</fullName>
            </value>
            <value>
                <fullName>CRETEIL</fullName>
            </value>
            <value>
                <fullName>ECOUEN</fullName>
            </value>
            <value>
                <fullName>ENGHIEN</fullName>
            </value>
            <value>
                <fullName>FONTAINEBLEAU</fullName>
            </value>
            <value>
                <fullName>HOUILLES</fullName>
            </value>
            <value>
                <fullName>JOUARS PONTCHARTRAIN</fullName>
            </value>
            <value>
                <fullName>LE BOURGET</fullName>
            </value>
            <value>
                <fullName>LE RAINCY</fullName>
            </value>
            <value>
                <fullName>LEVALLOIS</fullName>
            </value>
            <value>
                <fullName>MANTES LA JOLIE</fullName>
            </value>
            <value>
                <fullName>MEAUX</fullName>
            </value>
            <value>
                <fullName>MELUN</fullName>
            </value>
            <value>
                <fullName>MONTREUIL</fullName>
            </value>
            <value>
                <fullName>MONTROUGE</fullName>
            </value>
            <value>
                <fullName>ORSAY</fullName>
            </value>
            <value>
                <fullName>PARIS COTY</fullName>
            </value>
            <value>
                <fullName>PARIS GARIBALDI</fullName>
            </value>
            <value>
                <fullName>PARIS LA FAYETTE</fullName>
            </value>
            <value>
                <fullName>PARIS LEDRU ROLLIN</fullName>
            </value>
            <value>
                <fullName>PARIS RICHARD LENOIR</fullName>
            </value>
            <value>
                <fullName>PARIS ROME</fullName>
            </value>
            <value>
                <fullName>POISSY</fullName>
            </value>
            <value>
                <fullName>PONTAULT COMBAULT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>