force-app/main/default/objects/ReferentielOperation__c/fields/Magasins_DR_Nord__c.field-meta.xml
<CustomField>
    <fullName>Magasins_DR_Nord__c</fullName>
    <label>Magasins (DR Nord)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMIENS</fullName>
            </value>
            <value>
                <fullName>ARPAJON</fullName>
            </value>
            <value>
                <fullName>ARRAS</fullName>
            </value>
            <value>
                <fullName>ATHIS MONS</fullName>
            </value>
            <value>
                <fullName>AUXERRE</fullName>
            </value>
            <value>
                <fullName>BEAUVAIS</fullName>
            </value>
            <value>
                <fullName>BETHUNE</fullName>
            </value>
            <value>
                <fullName>BOULOGNE SUR MER</fullName>
            </value>
            <value>
                <fullName>BOURG LA REINE</fullName>
            </value>
            <value>
                <fullName>BRIE COMTE ROBERT</fullName>
            </value>
            <value>
                <fullName>CHALONS EN CHAMPAGNE</fullName>
            </value>
            <value>
                <fullName>CHAMPIGNY</fullName>
            </value>
            <value>
                <fullName>CHANTILLY</fullName>
            </value>
            <value>
                <fullName>CHARLEVILLE</fullName>
            </value>
            <value>
                <fullName>CHARTRES</fullName>
            </value>
            <value>
                <fullName>CHELLES</fullName>
            </value>
            <value>
                <fullName>COMPIEGNE</fullName>
            </value>
            <value>
                <fullName>CRETEIL</fullName>
            </value>
            <value>
                <fullName>DOUAI</fullName>
            </value>
            <value>
                <fullName>DREUX</fullName>
            </value>
            <value>
                <fullName>DUNKERQUE</fullName>
            </value>
            <value>
                <fullName>ECOUEN</fullName>
            </value>
            <value>
                <fullName>ENGHIEN</fullName>
            </value>
            <value>
                <fullName>EPERNAY</fullName>
            </value>
            <value>
                <fullName>EVREUX</fullName>
            </value>
            <value>
                <fullName>FONTAINEBLEAU</fullName>
            </value>
            <value>
                <fullName>HOUILLES</fullName>
            </value>
            <value>
                <fullName>JOUARS PONTCHARTRAIN</fullName>
            </value>
            <value>
                <fullName>LE BOURGET</fullName>
            </value>
            <value>
                <fullName>LE HAVRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>