force-app/main/default/objects/ReferentielOperation__c/fields/Magasins_DR_Ouest__c.field-meta.xml
<CustomField>
    <fullName>Magasins_DR_Ouest__c</fullName>
    <label>Magasins (DR Ouest)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AGEN</fullName>
            </value>
            <value>
                <fullName>ALBI</fullName>
            </value>
            <value>
                <fullName>ANGERS</fullName>
            </value>
            <value>
                <fullName>BLOIS</fullName>
            </value>
            <value>
                <fullName>BORDEAUX CENON</fullName>
            </value>
            <value>
                <fullName>BORDEAUX VILLENAVE</fullName>
            </value>
            <value>
                <fullName>LANGON</fullName>
            </value>
            <value>
                <fullName>LE MANS</fullName>
            </value>
            <value>
                <fullName>LIBOURNE</fullName>
            </value>
            <value>
                <fullName>MONTARGIS</fullName>
            </value>
            <value>
                <fullName>ORLEANS</fullName>
            </value>
            <value>
                <fullName>SAINT ANDRE DE CUBZAC</fullName>
            </value>
            <value>
                <fullName>SAINTES</fullName>
            </value>
            <value>
                <fullName>TOULOUSE ARCOLE</fullName>
            </value>
            <value>
                <fullName>TOULOUSE MURET</fullName>
            </value>
            <value>
                <fullName>TOULOUSE SAINT CYPRIEN</fullName>
            </value>
            <value>
                <fullName>TOULOUSE URSS</fullName>
            </value>
            <value>
                <fullName>TOURS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>