force-app/main/default/objects/ReferentielOperation__c/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine (K2)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>CAMPAGNES MARKETING</fullName>
            </value>
            <value>
                <fullName>JPO</fullName>
            </value>
            <value>
                <fullName>PASSAGE MAGASIN</fullName>
            </value>
            <value>
                <fullName>TELEPRO MAGASIN</fullName>
            </value>
            <value>
                <fullName>COLLABORATEUR K PAR K</fullName>
            </value>
            <value>
                <fullName>COLLABORATEUR+RETRAIT S-GOBAIN</fullName>
            </value>
            <value>
                <fullName>STAND GM</fullName>
            </value>
            <value>
                <fullName>FOIRE</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>WEB CONFIGURATEUR</fullName>
            </value>
            <value>
                <fullName>BAL VENDEUR</fullName>
            </value>
            <value>
                <fullName>PORTE A PORTE VENDEUR</fullName>
            </value>
            <value>
                <fullName>COMPLEMENT VENDEUR</fullName>
            </value>
            <value>
                <fullName>PARRAINAGE VENDEUR</fullName>
            </value>
            <value>
                <fullName>STAND MARCHE VENDEUR</fullName>
            </value>
            <value>
                <fullName>TELEPHONE VENDEUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>