force-app/main/default/objects/ReferentielOperation__c/fields/Precisions_autres_couts__c.field-meta.xml
<CustomField>
    <fullName>Precisions_autres_couts__c</fullName>
    <label>Précisions (autres coûts)</label>
    <type>TextArea</type>
</CustomField>