force-app/main/default/objects/ReferentielOperation__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Origine (K3)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Vous devez définir une source valide!</errorMessage>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Source</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Opérations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>