force-app/main/default/objects/ReferentielOperation__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <formula>IF(TODAY() &lt; Datedebut__c, &apos;Non commencée&apos;, IF(TODAY() &gt; Datefin__c + 4, &apos;Terminée&apos;, &apos;En cours&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut</label>
    <type>Text</type>
</CustomField>