force-app/main/default/objects/ReferentielOperation__c/fields/SurfaceduStand__c.field-meta.xml
<CustomField>
    <fullName>SurfaceduStand__c</fullName>
    <label>Surface du Stand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HC : Hors-catégorie</fullName>
            </value>
            <value>
                <fullName>G1 : 36m²</fullName>
            </value>
            <value>
                <fullName>G2 : 18m²</fullName>
            </value>
            <value>
                <fullName>G3 : 9m²</fullName>
            </value>
            <value>
                <fullName>G4 : Stand GM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>