force-app/main/default/objects/ReferentielOperation__c/recordTypes/RT_Stand_surface.recordType-meta.xml
<RecordType>
    <fullName>RT_Stand_surface</fullName>
    <active>true</active>
    <label>RT - Stand surface</label>
</RecordType>