force-app/main/default/objects/ReferentielOperation__c/recordTypes/RT_Stand_surface_2.recordType-meta.xml
<RecordType>
    <fullName>RT_Stand_surface_2</fullName>
    <active>true</active>
    <label>RT - Stand surface 2</label>
</RecordType>