force-app/main/default/objects/ReferentielOperation__c/validationRules/FRA_CodeDV.validationRule-meta.xml
<ValidationRule>
    <fullName>FRA_CodeDV</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(Code_DV__c ) &lt; 3, 
    !CONTAINS($Profile.Name, &apos;K/K - DV&apos;), 
    $User.ByPassValidationRule__c = FALSE)</errorConditionFormula>
    <errorDisplayField>Code_DV__c</errorDisplayField>
    <errorMessage>Le Code DV doit contenir 3 trois caractères</errorMessage>
</ValidationRule>