force-app/main/default/objects/ReferentielOperation__c/validationRules/FRA_ControleDates.validationRule-meta.xml
<ValidationRule>
    <fullName>FRA_ControleDates</fullName>
    <active>true</active>
    <errorConditionFormula>Datedebut__c &gt; Datefin__c</errorConditionFormula>
    <errorMessage>La date de début doit être antérieure ou égale à la date de fin de l&apos;opération!</errorMessage>
</ValidationRule>