force-app/main/default/objects/ReferentielOperation__c/listViews/All_Operations.listView-meta.xml
<ListView>
    <fullName>All_Operations</fullName>
    <columns>NAME</columns>
    <columns>Ville__c</columns>
    <columns>Datedebut__c</columns>
    <columns>Datefin__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les opérations</label>
</ListView>