force-app/main/default/objects/ReferentielOperation__c/listViews/FOIRES_2019.listView-meta.xml
<ListView>
    <fullName>FOIRES_2019</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Datedebut__c</columns>
    <columns>Datefin__c</columns>
    <columns>SurfaceduStand__c</columns>
    <columns>Code__c</columns>
    <columns>Ville__c</columns>
    <columns>magasins__c</columns>
    <columns>Coutemplacement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SurfaceduStand__c</field>
        <operation>equals</operation>
        <value>G3 : 9m²,HC : Hors-catégorie,G1 : 36m²,G2 : 18m²</value>
    </filters>
    <filters>
        <field>Datefin__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2019</value>
    </filters>
    <filters>
        <field>Datedebut__c</field>
        <operation>lessThan</operation>
        <value>1/1/2020</value>
    </filters>
    <filters>
        <field>Coutsmontagedemontage__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Coutsmontagedemontage__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>FOIRES 2019</label>
    <language>fr</language>
    <sharedTo>
        <role>DirecteurAdminetFinancier</role>
        <role>Supportutilisateur</role>
    </sharedTo>
</ListView>