force-app/main/default/objects/ReferentielOperation__c/listViews/Ile_de_France_NORD_op_rations.listView-meta.xml
<ListView>
    <fullName>Ile_de_France_NORD_op_rations</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
    <columns>Ville__c</columns>
    <columns>Datedebut__c</columns>
    <columns>Datefin__c</columns>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>SurfaceduStand__c</columns>
    <columns>Magasins_DR_IDF__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code2__c</field>
        <operation>startsWith</operation>
        <value>IFN</value>
    </filters>
    <filters>
        <field>Code__c</field>
        <operation>startsWith</operation>
        <value>IFN</value>
    </filters>
    <filters>
        <field>Code2__c</field>
        <operation>startsWith</operation>
        <value>PIC</value>
    </filters>
    <filters>
        <field>Code__c</field>
        <operation>startsWith</operation>
        <value>PIC</value>
    </filters>
    <filters>
        <field>Code2__c</field>
        <operation>startsWith</operation>
        <value>SEM</value>
    </filters>
    <filters>
        <field>Code__c</field>
        <operation>startsWith</operation>
        <value>SEM</value>
    </filters>
    <label>Ile de France NORD - opérations</label>
    <language>fr</language>
    <sharedTo>
        <role>ContrleurdExploitation</role>
        <role>ContrleurdeGestion</role>
        <role>DV0068</role>
        <role>DirecteurAdminetFinancier</role>
        <role>DirecteurExcutif</role>
        <role>RV0018</role>
    </sharedTo>
</ListView>