force-app/main/default/objects/ReferentielOperation__c/listViews/Liste_ope_dr_est.listView-meta.xml
<ListView>
    <fullName>Liste_ope_dr_est</fullName>
    <columns>Ville__c</columns>
    <columns>Datedebut__c</columns>
    <columns>Datefin__c</columns>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>SurfaceduStand__c</columns>
    <columns>Magasins_DR_Est__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Magasins_DR_Est__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>3EST - opérations</label>
    <language>fr</language>
    <sharedTo>
        <role>ContrleurdExploitation</role>
        <role>ContrleurdeGestion</role>
        <role>DirecteurAdminetFinancier</role>
        <role>DirecteurExcutif</role>
        <role>RV0017</role>
        <role>ResponsableContrledeGestion</role>
        <role>ResponsableMthodeetContrleInterne</role>
    </sharedTo>
</ListView>